syntax = "proto3";

package ping;

option go_package = "./pingpb";

service PingService {
    rpc PingStream(PingRequest) returns (stream PingResponse);
}

message PingRequest {
    string message = 1;
}

message PingResponse {
    string message = 1;
}